Fixed CSS issue with columns not showing up correctly, also fixed reposition button

--- a/src/components/Global/RowPlaceholder/RowPlaceholder.module.css
+++ b/src/components/Global/RowPlaceholder/RowPlaceholder.module.css
@@ -1,5 +1,5 @@
 .base_color {
-    color: var(--text1);
+    color: var(----accent1);
 }
 
 .mono_font {
